ebrains/deployment-nest-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: nest-simulator
  name: nest-simulator
  namespace: nest-desktop
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      io.kompose.service: nest-simulator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        io.kompose.network/nest-desktop-default: 'true'
        io.kompose.service: nest-simulator
      name: nest-simulator
      namespace: nest-desktop
    spec:
      containers:
        - env:
            - name: NEST_CONTAINER_MODE
              value: nest-server
          image: docker-registry.ebrains.eu/nest/nest-simulator:3.6
          imagePullPolicy: IfNotPresent
          name: nest-simulator
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
