ebrains/service-nest-simulator.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: nest-simulator
  name: nest-simulator
  namespace: nest-desktop
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 52425
      protocol: TCP
      targetPort: 52425
  selector:
    io.kompose.service: nest-simulator
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
  type: ClusterIP
